--- a/index.html
+++ b/index.html
@@ -4,142 +4,153 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Karma"
+    />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Tech Returners Surgery: Home</title>
   </head>
 
   <body>
-    <header>
-      <a href="#">Tech Returners Surgery</a>
-      <a href="tel:03330509138">0333 050 9138</a>
-    </header>
+    <div class="container">
+      <header>
+        <div>
+          <a class="header_logo" href="#">Tech Returners Surgery</a>
+          <a class="header_phone" href="tel:03330509138">0333 050 9138</a>
+        </div>
+        <div class="header_nav">
+          <nav>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Team</a></li>
+              <li><a href="#">Patient Information</a></li>
+              <li><a href="#">Well-being Centre</a></li>
+            </ul>
+          </nav>
 
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Patient Information</a></li>
-        <li><a href="#">Well-being Centre</a></li>
-      </ul>
-    </nav>
+          <label for="site-search">Search...</label>
+          <input
+            type="search"
+            id="site-search"
+            name="search"
+            aria-label="Search through site content"
+          />
+          <button>Search</button>
+        </div>
+      </header>
 
-    <label for="site-search">Search...</label>
-    <input
-      type="search"
-      id="site-search"
-      name="search"
-      aria-label="Search through site content"
-    />
-    <button>Search</button>
+      <section class="restriction">
+        <h2>COVID Restriction Update</h2>
 
-    <section>
-      <h3>COVID Restriction Update</h3>
+        <p>
+          Throughout the pandemic we have strove to make the surgery as safe as
+          possible for all our patients and staff, we will continue to do so.
+        </p>
 
-      <p>
-        Throughout the pandemic we have strove to make the surgery as safe as
-        possible for all our patients and staff, we will continue to do so.
-      </p>
+        <p>
+          From the
+          <strong>19th July 2021 nothing will change at the Surgery</strong>
+          Patients will <strong>still need</strong> to wear a mask, socially
+          distance and use hand sanitiser in the surgery and staff will continue
+          to wear PPE.
+        </p>
 
-      <p>
-        From the
-        <strong>19th July 2021 nothing will change at the Surgery</strong>
-        Patients will <strong>still need</strong> to wear a mask, socially
-        distance and use hand sanitiser in the surgery and staff will continue
-        to wear PPE.
-      </p>
+        <p>
+          If you arrive without a mask and are not exempt, you will be asked to
+          leave.
+        </p>
+      </section>
 
-      <p>
-        If you arrive without a mask and are not exempt, you will be asked to
-        leave.
-      </p>
-    </section>
+      <address>
+        <h2>Welcome to the Tech Returners Surgery!</h2>
 
-    <address>
-      <h3>Welcome to the Tech Returners Surgery!</h3>
-
-      <img
-        src="./surgery.png"
-        width="300"
-        alt="A collection of medical items strewn across a blue background"
-      />
-
-      <div>
-        The Tech Returners Surgery,<br />
-        115 Mancunian Way,<br />
-        Manchester,<br />
-        M20 3PX
-      </div>
-    </address>
-
-    <section>
-      <h2>How to use Ask My Doc?</h2>
-
-      <video controls width="250">
-        <source src="#" type="video/webm" />
-        <source src="#" type="video/mp4" />
-
-        <track
-          kind="captions"
-          srclang="en"
-          src="./ask_my_doc_transcript.vtt"
-          default
+        <img
+          class="address_img"
+          src="./surgery.png"
+          alt="A collection of medical items strewn across a blue background"
         />
 
-        Sorry, your browser doesn't support embedded videos.
-      </video>
-    </section>
+        <div>
+          The Tech Returners Surgery,<br />
+          115 Mancunian Way,<br />
+          Manchester,<br />
+          M20 3PX
+        </div>
+      </address>
 
-    <section>
-      <h2>Need advice or have some feedback for us?</h2>
+      <section>
+        <h2>How to use Ask My Doc?</h2>
 
-      <form>
-        <fieldset>
-          <legend>
-            Send us a message by filling out the form below and one of our
-            Receptionists will be in touch:
-          </legend>
+        <video controls width="250">
+          <source src="#" type="video/webm" />
+          <source src="#" type="video/mp4" />
 
-          <p>Are you completing this form on behalf of:</p>
+          <track
+            kind="captions"
+            srclang="en"
+            src="./ask_my_doc_transcript.vtt"
+            default
+          />
 
-          <label for="self">Yourself </label>
-          <input type="checkbox" id="self" name="self" />
+          Sorry, your browser doesn't support embedded videos.
+        </video>
+      </section>
 
-          <label for="another">Someone else </label>
-          <input type="checkbox" id="another" name="another" />
+      <section>
+        <h2>Need advice or have some feedback for us?</h2>
 
-          <div>
-            <label for="fname">First Name </label>
-            <input type="text" id="fname" name="fname" required />
-          </div>
+        <form>
+          <fieldset>
+            <legend>
+              Send us a message by filling out the form below and one of our
+              Receptionists will be in touch:
+            </legend>
 
-          <div>
-            <label for="lname">Last Name </label>
-            <input type="text" id="lname" name="lname" required />
-          </div>
+            <p>Are you completing this form on behalf of:</p>
 
-          <div>
-            <label for="dob">Date of Birth </label>
-            <input type="date" id="dob" name="dob" required />
-          </div>
+            <label for="self">Yourself </label>
+            <input type="checkbox" id="self" name="self" />
 
-          <div>
-            <label for="telephone">Telephone Number: </label>
-            <input type="tel" id="telephone" name="telephone" required />
-          </div>
+            <label for="another">Someone else </label>
+            <input type="checkbox" id="another" name="another" />
 
-          <div>
-            <label for="email">Email: </label>
-            <input type="email" id="email" name="email" required />
-          </div>
+            <div>
+              <label for="fname">First Name </label>
+              <input type="text" id="fname" name="fname" required />
+            </div>
 
-          <div>
-            <label for="message">Your query or message: </label>
-            <input type="text" id="message" name="message" required />
-          </div>
+            <div>
+              <label for="lname">Last Name </label>
+              <input type="text" id="lname" name="lname" required />
+            </div>
 
-          <input type="submit" value="Submit" />
-        </fieldset>
-      </form>
-    </section>
+            <div>
+              <label for="dob">Date of Birth </label>
+              <input type="date" id="dob" name="dob" required />
+            </div>
+
+            <div>
+              <label for="telephone">Telephone Number: </label>
+              <input type="tel" id="telephone" name="telephone" required />
+            </div>
+
+            <div>
+              <label for="email">Email: </label>
+              <input type="email" id="email" name="email" required />
+            </div>
+
+            <div>
+              <label for="message">Your query or message: </label>
+              <input type="text" id="message" name="message" required />
+            </div>
+
+            <input type="submit" value="Submit" />
+          </fieldset>
+        </form>
+      </section>
+    </div>
   </body>
 </html>
