fix: add navigation block styles

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   <body>
     <div class="container">
       <header>
-        <div>
-          <a class="header_logo" href="#">Tech Returners Surgery</a>
-          <a class="header_phone" href="tel:03330509138">0333 050 9138</a>
+        <div class="header_info">
+          <a class="header_info_logo" href="#">Tech Returners Surgery</a>
+          <a class="header_info_phone" href="tel:03330509138">
+            &#9990; 0333 050 9138</a
+          >
         </div>
         <div class="header_nav">
           <nav>
@@ -30,15 +32,16 @@
               <li><a href="#">Well-being Centre</a></li>
             </ul>
           </nav>
-
-          <label for="site-search">Search...</label>
-          <input
-            type="search"
-            id="site-search"
-            name="search"
-            aria-label="Search through site content"
-          />
-          <button>Search</button>
+          <div class="header_search">
+            <label for="site-search">Search...</label>
+            <input
+              type="search"
+              id="site-search"
+              name="search"
+              aria-label="Search through site content"
+            />
+            <button>Search</button>
+          </div>
         </div>
       </header>
 
