fix: add content block styles

--- a/index.html
+++ b/index.html
@@ -66,42 +66,42 @@
           leave.
         </p>
       </section>
+      <div class="columns">
+        <address class="two-columns">
+          <h2>Welcome to the Tech Returners Surgery!</h2>
+          <div class="address_columns">
+            <img
+              class="address_img"
+              src="./surgery.png"
+              alt="A collection of medical items strewn across a blue background"
+            />
+            <div class="address_surgery">
+              The Tech Returners Surgery,<br />
+              115 Mancunian Way,<br />
+              Manchester,<br />
+              M20 3PX
+            </div>
+          </div>
+        </address>
 
-      <address>
-        <h2>Welcome to the Tech Returners Surgery!</h2>
+        <section class="two-columns">
+          <h2>How to use Ask My Doc?</h2>
 
-        <img
-          class="address_img"
-          src="./surgery.png"
-          alt="A collection of medical items strewn across a blue background"
-        />
+          <video controls width="250">
+            <source src="#" type="video/webm" />
+            <source src="#" type="video/mp4" />
 
-        <div>
-          The Tech Returners Surgery,<br />
-          115 Mancunian Way,<br />
-          Manchester,<br />
-          M20 3PX
-        </div>
-      </address>
+            <track
+              kind="captions"
+              srclang="en"
+              src="./ask_my_doc_transcript.vtt"
+              default
+            />
 
-      <section>
-        <h2>How to use Ask My Doc?</h2>
-
-        <video controls width="250">
-          <source src="#" type="video/webm" />
-          <source src="#" type="video/mp4" />
-
-          <track
-            kind="captions"
-            srclang="en"
-            src="./ask_my_doc_transcript.vtt"
-            default
-          />
-
-          Sorry, your browser doesn't support embedded videos.
-        </video>
-      </section>
-
+            Sorry, your browser doesn't support embedded videos.
+          </video>
+        </section>
+      </div>
       <section>
         <h2>Need advice or have some feedback for us?</h2>
 
