fix: add form block styles

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </video>
         </section>
       </div>
-      <section>
+      <section class="contact">
         <h2>Need advice or have some feedback for us?</h2>
 
         <form>
@@ -154,6 +154,7 @@
           </fieldset>
         </form>
       </section>
+			
     </div>
   </body>
 </html>
